--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,66 @@
-# Prerequisites
-*.d
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+#include <iostream>
+#include <string>
+using namespace std;
 
-# Precompiled Headers
-*.gch
-*.pch
+int main() {
+    // Initialization
+    int balance = 1000, option, auth_pin = 0000, pin;
+    string name;
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+    // Get user's name
+    cout << "Enter your name: ";
+    getline(cin, name);
 
-# Fortran module files
-*.mod
-*.smod
+    // Get user's PIN
+    cout << "Enter your 4-digit PIN: ";
+    cin >> pin;
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+    // Authenticate the user
+    if (pin != auth_pin) {
+        cout << "Invalid PIN!" << endl;
+        return 0;
+    }
 
-# Executables
-*.exe
-*.out
-*.app
+    // Display the menu and get user's choice
+    while (true) {
+        cout << endl << "Select an option:" << endl;
+        cout << "1. Check balance" << endl;
+        cout << "2. Send money" << endl;
+        cout << "3. Reset PIN" << endl;
+        cout << "4. Quit" << endl;
+        cin >> option;
+
+        // Perform the selected operation
+        switch (option) {
+            case 1:
+                cout << "Your balance is: " << balance << endl;
+                break;
+            case 2:
+                int amount;
+                cout << "Enter the amount to send: ";
+                cin >> amount;
+                if (amount <= balance) {
+                    balance -= amount;
+                    cout << "Money sent successfully!" << endl;
+                }
+                else {
+                    cout << "Insufficient balance!" << endl;
+                }
+                break;
+            case 3:
+                cout << "Enter your new 4-digit PIN: ";
+                cin >> auth_pin;
+                cout << "PIN reset successful!" << endl;
+                break;
+            case 4:
+                cout << "Goodbye, " << name << "!" << endl;
+                return 0;
+            default:
+                cout << "Invalid option!" << endl;
+                break;
+        }
+    }
+
+    return 0;
+}
